ontol/ontol-compiler/test-cases/error/known_bugs/unify_partial.on
// I think this test wants `..spread` patterns..

def Filter (
    rel .'foo'?: text
    rel .'bar'?: text
)

def Foo (
    rel .'foo': text
    rel .'bar': text
)

map(
    Filter('foo': foo), // ERROR TODO: optional binding required, as a default value cannot be created
    Foo('foo': foo) // ERROR missing property `bar`// NOTE consider using `match {}`
)
